tests/snapshots/examples_fixtures/basics__higher_order_builtins.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/basics/higher_order_builtins.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/higher_order_builtins.flx:11:1
   |
11 | print(any(nums, /x -> x > 3))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ----------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/basics/higher_order_builtins.flx:11:1
   |
11 | print(any(nums, /x -> x > 3))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ----------------------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/higher_order_builtins.flx:12:1
   |
12 | print(any(nums, /x -> x > 10))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ------------------------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/higher_order_builtins.flx:13:1
   |
13 | print(any([||], /x -> true))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ---------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/higher_order_builtins.flx:19:1
   |
19 | print(all(nums, /x -> x > 0))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ----------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/higher_order_builtins.flx:20:1
   |
20 | print(all(nums, /x -> x > 3))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ----------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/higher_order_builtins.flx:21:1
   |
21 | print(all([||], /x -> false))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ----------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/higher_order_builtins.flx:27:1
   |
27 | print(find(nums, /x -> x > 3))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ------------------------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/higher_order_builtins.flx:28:1
   |
28 | print(find(words, /w -> len(w) == 3))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/higher_order_builtins.flx:29:1
   |
29 | print(find(nums, /x -> x > 100))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | -------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/higher_order_builtins.flx:37:1
   |
37 | print(greeting)
   | ^^^^^^^^^^^^^^^
   | --------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/higher_order_builtins.flx:44:1
   |
44 | print(sort_by(words, /w -> len(w)))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ----------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/higher_order_builtins.flx:47:1
   |
47 | print(sort_by(nums, /x -> 0 - x))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | --------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/higher_order_builtins.flx:52:1
   |
52 | print(map(by_age, /p -> p.0))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ----------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/higher_order_builtins.flx:61:1
   |
61 | print(zip(zk, zv))
   | ^^^^^^^^^^^^^^^^^^
   | ------------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/higher_order_builtins.flx:64:1
   |
64 | print(zip([|1, 2, 3|], [|"x", "y"|]))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/higher_order_builtins.flx:68:1
   |
68 | print(lengths)
   | ^^^^^^^^^^^^^^
   | -------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/higher_order_builtins.flx:75:1
   |
75 | print(flatten(nested))
   | ^^^^^^^^^^^^^^^^^^^^^^
   | ---------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/higher_order_builtins.flx:80:1
   |
80 | print(all_words)
   | ^^^^^^^^^^^^^^^^
   | ---------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/higher_order_builtins.flx:83:1
   |
83 | print(flatten([|[|1|], [||], [|2|]|]))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | -------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/higher_order_builtins.flx:89:1
   |
89 | print(count(nums, /x -> x % 2 == 0))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ------------------------------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/higher_order_builtins.flx:90:1
   |
90 | print(count(mixed, is_int))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | --------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/higher_order_builtins.flx:91:1
   |
91 | print(count([||], /x -> true))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ------------------------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/higher_order_builtins.flx:94:1
   |
94 | print(count(words, /w -> len(w) > 4))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/higher_order_builtins.flx:102:1
    |
102 | print(longest)
    | ^^^^^^^^^^^^^^
    | -------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/higher_order_builtins.flx:106:1
    |
106 | print(evens_gt2)
    | ^^^^^^^^^^^^^^^^
    | ---------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/higher_order_builtins.flx:111:1
    |
111 | print(even_pairs)
    | ^^^^^^^^^^^^^^^^^
    | ----------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.

Found 27 errors.
== stdout ==
<not executed>
